# expardus_tracing

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: REFACTORING_LOG.md  SECURITY_BASELINE.md
docs/architecture/: expardus_tracing_package.md  expardus_tracing_package_diagrams.mmd  expardus_tracing_package_open_questions.md  medium_and_strategic_improvements.md
docs/architecture/expardus_tracing_package_diagrams/: 01_expardus_tracing_celery_trace_propagation_lifecycle.mmd  02_expardus_tracing_module_dependency_graph.mmd  03_expardus_tracing_trace_span_nesting.mmd  04_expardus_tracing_header_extraction_priority.mmd
docs/maintenance/: OPTIMIZATION_AUDIT.md  REFACTOR_LOG.md
docs/refactor/extract-expardus-tracing/: NOTES.md  PARITY_MAP.md  PLAN.md
docs/refactor/medium-improvements/: NOTES.md  PARITY_MAP.md  PLAN.md
docs/refactor/strategic-improvements/: NOTES.md  PARITY_MAP.md  PLAN.md
docs/security/: SECURITY_AUDIT.md  SECURITY_BASELINE.md  SECURITY_TESTS.md
expardus_tracing/: __init__.py  celery.py  context.py  headers.py  logging.py  w3c.py
tests/: test_celery_integration.py  test_celery_signals.py  test_concurrency.py  test_context.py  test_exports.py  test_headers.py  test_logging.py  test_w3c.py
