[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expardus-tracing"
version = "0.1.1"
description = "Shared distributed tracing library for the exPardus ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
celery = ["celery>=5.3"]
json-logging = ["python-json-logger>=2.0"]
dev = [
    "pytest>=7.0",
    "celery>=5.3",
    "python-json-logger>=2.0",
]

[tool.setuptools.packages.find]
include = ["expardus_tracing*"]

[tool.setuptools.package-data]
expardus_tracing = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["celery.*", "otel_worker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pythonjsonlogger.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
